tests/machine/x/pl/dataset_where_filter.pl
:- style_check(-singleton).
main :-
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    write("--- Adults ---"),
    nl,
    % unsupported: for without range not supported
    true.
:- initialization(main, main).
